gcc/testsuite/rust/rustc/ui/issues/issue-2937.rs
use m::f as x; // { dg-error ".E0432." "" { target *-*-* } }
// { dg-error ".E0432." "" { target *-*-* } .-1 }

mod m {}

fn main() {}

